gccida/c0/has_cleanups
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/has_cleanups/src/tree.c:2473:24: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
nops = first_rtl_op( ( tree_code)( unsigned __int8)*( ( _DWORD *)&exp->common + 4)); 
                       ^~~~~~~~~
                       tree_cons
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/has_cleanups/src/tree.c:1314:1: note: 'tree_cons' declared here
tree_cons (purpose, value, chain)
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/has_cleanups/src/tree.c:2473:36: error: expected expression
nops = first_rtl_op( ( tree_code)( unsigned __int8)*( ( _DWORD *)&exp->common + 4)); 
                                   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/has_cleanups/src/obj/tree.o] Error 1
